[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llama-index-graph-stores-postgres"
version = "0.1.0"
description = "llama-index integration with PostgreSQL graph store and pgvector"
authors = ["LlamaIndex Team <team@llamaindex.ai>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/run-llama/llama_index"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
llama-index-core = "^0.10.0"
sqlalchemy = ">=1.4.0,<3.0.0"
psycopg = "^3.1.12"
pgvector = "^0.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]