[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "mypy>=1.10.0,<2",
    "pre-commit==3.2.0",
    "pytest==7.2.1",
    "black[jupyter]<=23.9.1,>=23.7.0",
    "codespell[toml]>=v2.2.6",
    "diff-cover>=9.2.0",
    "pytest-cov>=6.1.1",
]

[project]
name = "llama-index-graph-stores-postgres"
version = "0.1.0"
description = "llama-index graph stores postgres integration"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "pgvector>=0.3.6,<1.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "SQLAlchemy>=2.0.30,<3",
    "llama-index-core>=0.12.0,<0.13",
]

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.llamahub]
contains_example = false
import_path = "llama_index.graph_stores.postgres"

[tool.llamahub.class_authors]
PostgresGraphStore = "llama-index"
PostgresPropertyGraphStore = "llama-index"

[tool.mypy]
disallow_untyped_defs = true
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.12"
